--- a/blog-single.html
+++ b/blog-single.html
@@ -1,7 +1,7 @@
 def say_hello(name):
-    return f"Hello, {name}!"
+    return f"Hello, {You}!"
 
 if __name__ == "__main__":
-    user_name = input("Enter your name: ")
-    greeting = say_hello(user_name)
+    user_name = input("Licheng Wei")
+    greeting = say_hello(Licheng Wei)
     print(greeting)
